// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login screen tests login screen applicant 1`] = `
<div
  className="login-container"
>
  <div
    className="treehacks-login"
  >
    <div
      className="text-center"
    >
      <a
        href=""
      >
        <img
          height="124px"
          src={[Function]}
          style={
            Object {
              "marginTop": 49,
            }
          }
          width="114px"
        />
      </a>
    </div>
    <a
      className="wordmark"
      href=""
    >
      <h2
        className="h3-style"
      >
        TREEHACKS
      </h2>
    </a>
    <div
      className="top-form"
    >
      <AuthForm
        formData={Object {}}
        onChange={[Function]}
        onSubmit={[Function]}
        schema={Object {}}
        uiSchema={Object {}}
      >
        <button
          className="btn btn-info"
          type="submit"
        >
          Sign In
        </button>
      </AuthForm>
      <div
        className="label-text centered"
      >
        or
      </div>
      <Component />
      <div
        className="mt-1 left-btn"
      >
        <Connect(AuthPageNavButton)
          current="signIn"
          label="Forgot Password"
          page="forgotPassword"
        />
      </div>
    </div>
    <div
      className="mt-1 back-container"
    >
      <Connect(AuthPageNavButton)
        className="btn-back"
        current="signIn"
        label="Back"
        page="defaultPage"
      />
    </div>
  </div>
</div>
`;

exports[`Login screen tests login screen judge 1`] = `
<div
  className="login-container"
>
  <div
    className="treehacks-login"
  >
    <div
      className="text-center"
    >
      <a
        href=""
      >
        <img
          height="124px"
          src={[Function]}
          style={
            Object {
              "marginTop": 49,
            }
          }
          width="114px"
        />
      </a>
    </div>
    <a
      className="wordmark"
      href=""
    >
      <h2
        className="h3-style"
      >
        TREEHACKS
      </h2>
    </a>
    <h3
      className="h3-style"
    >
      judges
    </h3>
    <div
      className="top-form"
    >
      <AuthForm
        formData={Object {}}
        onChange={[Function]}
        onSubmit={[Function]}
        schema={Object {}}
        uiSchema={Object {}}
      >
        <button
          className="btn btn-info"
          type="submit"
        >
          Sign In
        </button>
      </AuthForm>
      <div
        className="mt-1 left-btn"
      >
        <Connect(AuthPageNavButton)
          current="signIn"
          label="Forgot Password"
          page="forgotPassword"
        />
      </div>
    </div>
    <div
      className="mt-1 back-container"
    >
      <Connect(AuthPageNavButton)
        className="btn-back"
        current="signIn"
        label="Back"
        page="defaultPage"
      />
    </div>
  </div>
</div>
`;

exports[`Login screen tests login screen sponsor 1`] = `
<div
  className="login-container"
>
  <div
    className="treehacks-login"
  >
    <div
      className="text-center"
    >
      <a
        href=""
      >
        <img
          height="124px"
          src={[Function]}
          style={
            Object {
              "marginTop": 49,
            }
          }
          width="114px"
        />
      </a>
    </div>
    <a
      className="wordmark"
      href=""
    >
      <h2
        className="h3-style"
      >
        TREEHACKS
      </h2>
    </a>
    <h3
      className="h3-style"
    >
      sponsors
    </h3>
    <div
      className="top-form"
    >
      <AuthForm
        formData={Object {}}
        onChange={[Function]}
        onSubmit={[Function]}
        schema={Object {}}
        uiSchema={Object {}}
      >
        <button
          className="btn btn-info"
          type="submit"
        >
          Sign In
        </button>
      </AuthForm>
      <div
        className="mt-1 left-btn"
      >
        <Connect(AuthPageNavButton)
          current="signIn"
          label="Forgot Password"
          page="forgotPassword"
        />
      </div>
    </div>
    <div
      className="mt-1 back-container"
    >
      <Connect(AuthPageNavButton)
        className="btn-back"
        current="signIn"
        label="Back"
        page="defaultPage"
      />
    </div>
  </div>
</div>
`;
